added the code for smaller map application.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
         tr:nth-child(even) {
             background-color: #f2f2f2;
         }
+
+        /* Media query for responsiveness */
+        @media screen and (max-width: 1024px) {
+            #side-panel {
+                display: none;
+            }
+        }
     </style>
 </head>
 <body>
@@ -165,7 +172,7 @@
         }
 
         // Add event listener to the button
-        let btn = document.getElementsByTagName("button")[0];
+        let btn = document.getElementById("sort-button");
         btn.addEventListener('click', sortTable);
     </script>
 </body>
