Changed the map styling.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         mapboxgl.accessToken = 'pk.eyJ1IjoiamFrb2J6aGFvIiwiYSI6ImNpcms2YWsyMzAwMmtmbG5icTFxZ3ZkdncifQ.P9MBej1xacybKcDN_jehvw'; 
         let map = new mapboxgl.Map({
             container: 'map', // container ID
-            style: 'mapbox://styles/mapbox/satellite-v9', // style URL
+            style: 'mapbox://styles/mapbox/streets-v12', // Change map style here
             zoom: 5.5, // starting zoom
             center: [138, 38] // starting center
         });
